src/styles.scss
body {
  *,
  *::before,
  *::after {
    box-sizing: border-box;
  }

  margin: 0;
  line-height: 1.3;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
  color: #303030;

  h1 {
    margin: 0.5rem 0;
    font-size: 2em;
    font-weight: normal;
  }

  h2 {
    margin: 2rem 0 0.5rem;
    font-size: 1.5em;
    font-weight: normal;
  }

  p {
    margin: 0.5rem 0;
  }

  a {
    color: royalblue;
    font-family: SFMono-Regular, Consolas, "Liberation Mono", Menlo, monospace;

    &:link,
    &:visited,
    &:focus {
      text-decoration: none;
    }

    &:hover,
    &:active {
      text-decoration: underline;
    }
  }

  .svg-inline--fa {
    height: 1em;
    vertical-align: -0.125em;

    &.fa-lg {
      font-size: 1.33em;
    }

    &.fa-3x {
      font-size: 3em;
    }
  }
}

